<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_user_update"
            android:icon="@drawable/user_48"
            android:title="@string/item_user_update" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/star_52"
            android:title="@string/item_favorites" />
        <item
            android:id="@+id/nav_car_create"
            android:icon="@drawable/car_rental_filled_50"
            android:title="@string/item_car_create" />
        <item
            android:id="@+id/nav_car_update"
            android:icon="@drawable/car_rental_filled_50"
            android:title="@string/item_car_update" />
        <item
            android:id="@+id/nav_car_delete"
            android:icon="@drawable/car_rental_filled_50"
            android:title="@string/item_car_delete" />

    </group>


</menu>
